infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - name: posts
      port: 3010
      targetPort: 3010
      protocol: TCP
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 30007
